<resources>
   <string name="about">About</string>
   <string name="about_app">The FamilyWell Connects system consists of two main parts: The Connector and smart devices. The Connector, a key component of the system, communicates with smart devices using RF communication technology and connects to home Wi-Fi network to communicate with a Cloud Server to your smartphone app via mobile internet. In this way the system allows you to use your smart phone as a command center to complement various operations, including creating rules, adding and deleting components, arming and disarming, receiving push notifications when alarms are triggered and other customized operations. Smart devices in the system includes following devices that are selectable based on your needs: smoke alarm, gas alarm, CO detector, water detector, door sensor, passive infrared sensor, emergency button, smart socket, temperature and humidity device and so on. The list of devices in Connects are continuously updated; network camera, door lock, switch panel, socket panel, smart air purification, electromagnetic water valve and others are coming soon! </string>
   <string name="action">Perform the following actions in sequence</string>
   <string name="actived">Actived</string>
   <string name="add_camera">Add IPC</string>
   <string name="add_device_hint">Please quickly press the button of needed device 3 times.</string>
   <string name="add_device_tip">Attention: If you press the connector button for more than 3 seconds while the green light flashes then all the devices will be deleted! </string>
   <string name="add_equipment">Add Eq</string>
   <string name="add_localnet_ipc">Add the IPC under the same router</string>
   <string name="add_my_ipc">Add a new IPC</string>
   <string name="add_share_ipc">Add a shared IPC</string>
   <string name="add_success">Add Success</string>
   <string name="alarm">Alarm</string>
   <string name="alarm_remove">Alarm Clear</string>
   <string name="alert_delete_all_history_log">Is it sure to delete all historical alarm records?</string>
   <string name="alert_elder_care">Elderly care</string>
   <string name="all_condition">Devices act by All conditions</string>
   <string name="all_condition_hint_one">If you add one or more startup conditions, ’Auto Action’ will be executed while reaching all of the conditions. </string>
   <string name="all_condition_hint_three">If you do not understand the functionality of this option, select the default option or consult us.</string>
   <string name="all_condition_hint_two">If you only add only one start condition, the task is fulfilled at that time.</string>
   <string name="already_in_gateway">This device is already binded to the Gateway，Please set %1$s name</string>
   <string name="already_monitor_add">Alreay connet to wifi，But It has been binded.</string>
   <string name="app_name">FamilyWell</string>
   <string name="app_update_hint">New App Version:%1$s</string>
   <string name="app_version_hint">APP Ver</string>
   <string name="auto_login">Remember</string>
   <string name="auto_mode">Automatic</string>
   <string name="auto_modify">Volume</string>
   <string name="back">Back</string>
   <string name="background_update">LoadDownding in Background，Please hold on..</string>
   <string name="battery_low">Battery Low</string>
   <string name="battery_normal">Battery OK</string>
   <string name="brightness">Brightness</string>
   <string name="btn_silence">Silence</string>
   <string name="btnConfirmTitle">CONNECT</string>
   <string name="button">Button</string>
   <string name="call">CALL</string>
   <string name="camera_already_added">The camera has been added</string>
   <string name="camera_empety_name">Please enter the camera name</string>
   <string name="camera_empety_sn">Please enter the serial number</string>
   <string name="cancel">Cancel</string>
   <string name="card_open">Card Open</string>
   <string name="check_email">Register Email Success !</string>
   <string name="check_pic">Pictures</string>
   <string name="check_video">Videos</string>
   <string name="child_lock_status">Children Lock</string>
   <string name="choose_channel">Choose Channel</string>
   <string name="choose_color">Connector Color</string>
   <string name="choose_condition">Choose Condition</string>
   <string name="choose_gateway_type">Gateway Type Choose</string>
   <string name="choose_language">choose language</string>
   <string name="clear">Clear</string>
   <string name="click_exist">Click action added</string>
   <string name="click_to_call">Click to call</string>
   <string name="click_to_scan_qcode">Click and scan QR code</string>
   <string name="clicktoaction">Click</string>
   <string name="close">Close</string>
   <string name="coalarm">CO alarm</string>
   <string name="code_fault">Password Error</string>
   <string name="code_hint">Verification code</string>
   <string name="code_open">Code Open</string>
   <string name="coercion">Coercion</string>
   <string name="cold_mode">Antifreeze</string>
   <string name="common">Information</string>
   <string name="common_confirm">Confirm</string>
   <string name="common_retry">Retry</string>
   <string name="common_setting">Common Setting</string>
   <string name="condition">Conditions</string>
   <string name="config_fail_reason">Failure of connectting</string>
   <string name="config_instruction">Wait for 5 seconds after the gateway is powered on then press the gateway button for at least 3 seconds.</string>
   <string name="confirm_delete_monitor">Are U sure to delete the Monitor?</string>
   <string name="connect_alert">Current Connector:</string>
   <string name="connect_equipment_alert">Please Choose Connector</string>
   <string name="connected">Connected</string>
   <string name="copy_scene_alert">Do you copy the last scene?</string>
   <string name="current_gateway">Current Connector</string>
   <string name="current_mode_not_allow_delete">Current scene mode is not allowed to be deleted !</string>
   <string name="current_temp">Current</string>
   <string name="curtain">Curtain</string>
   <string name="cxalert11">Silence</string>
   <string name="cxalert2">Fault</string>
   <string name="cxalert5">Silence</string>
   <string name="cxalert6">Silence</string>
   <string name="cxalert7">Test Alarm</string>
   <string name="cxalert8">Temp Alarm</string>
   <string name="cxalert9">Fire alarm</string>
   <string name="cxsmalarm">CXSmoke</string>
   <string name="data_switch">Repeater</string>
   <string name="data_switch_gas_normal">Gas alarm is normal</string>
   <string name="data_switch_gas_warn">Gas alarm warn</string>
   <string name="data_switch_sm_low_voltage">Fire alarmer Low Voltage</string>
   <string name="data_switch_sm_normal">Fire alarmer is normal</string>
   <string name="data_switch_sm_warn">Fire alarmer warn</string>
   <string name="data_switch_test">Whether to test this device or not?</string>
   <string name="data_switch_water_normal">Water Immersion Detector Normal</string>
   <string name="data_switch_water_warn">Water Immersion Detector Alarm</string>
   <string name="data_syncing">Set up Ok..</string>
   <string name="day">day</string>
   <string name="default_scene">Default scene</string>
   <string name="default_scene_cannot_be_deleted">Default scene can not be deleted</string>
   <string name="delay">Delay</string>
   <string name="delay_exist">Adjacent delays can not be set</string>
   <string name="delete">Delete</string>
   <string name="delete_delay">Delete this delay</string>
   <string name="delete_equipment">Delete</string>
   <string name="delete_last_delay">Delete this device will also delete the previous delay</string>
   <string name="delete_or_not">Are you sure to delete？</string>
   <string name="delete_or_not_withdata">Are U Confirm to Delete？</string>
   <string name="delete_or_unbind_device">Are you sure to disconnects connector %1$s(%2$s)？</string>
   <string name="delete_success">Delete success!</string>
   <string name="dev_type_boutiquerotot">Head machine</string>
   <string name="dev_type_idr">Door bell</string>
   <string name="dev_type_intelligentsocket">Socket</string>
   <string name="dev_type_monitor">MONITOR</string>
   <string name="dev_type_smalleye">Rain point</string>
   <string name="device_alarm_func_capture">Camera interaction</string>
   <string name="device_alarm_func_capture_motion_tip">The device will grab a picture if it checks the moving object</string>
   <string name="device_alarm_func_level">Alarm sensitivity</string>
   <string name="device_alarm_func_pushmsg">MobilePush linkage</string>
   <string name="device_alarm_func_pushmsg_motion_tip">When a device triggers an alarm, a message is pushed to the cell phone</string>
   <string name="device_alarm_func_record">Video interaction</string>
   <string name="device_alarm_func_record_motion_tip">The device starts recording if the moving object is examined</string>
   <string name="device_alarm_motion_detection">Motion detection</string>
   <string name="device_alarm_motion_detection_tip">The device triggers an alarm event if a moving object is detected</string>
   <string name="device_alarm_no_change">No change</string>
   <string name="device_alarm_video_block">Video occlusion</string>
   <string name="device_already_bind">Gateway has been bound!</string>
   <string name="device_already_bind_to">The connector %1$s has been bind to %2$s</string>
   <string name="device_camera_video_list_empty">The video list is empty on that day. Please select another date.</string>
   <string name="device_has_been_find">The Connector has been found,binding...</string>
   <string name="device_is_not_at">Device has lost</string>
   <string name="device_list">Connector List</string>
   <string name="device_login_input_password">Please enter the device login password.</string>
   <string name="device_net_connect_type_ip">type_IP</string>
   <string name="device_net_connect_type_p2p">P2P</string>
   <string name="device_net_connect_type_rps">RPS</string>
   <string name="device_net_connect_type_transmit">type_transmit</string>
   <string name="device_net_connect_type_unknown">type_unknown</string>
   <string name="device_opt_alarm_config">Alarm configuration</string>
   <string name="device_opt_picture_list">Device photos</string>
   <string name="device_opt_record_list">Device video</string>
   <string name="device_opt_set_wifi">SET WiFi</string>
   <string name="device_opt_set_wifi_hint_passwd">WiFi Password</string>
   <string name="device_opt_set_wifi_hint_ssid">WiFi SSID</string>
   <string name="device_opt_set_wifi_info_error">Current Wifi information error</string>
   <string name="device_pic_list_empty">Device pic list empty,please choose other date.</string>
   <string name="device_pic_type_manual">Remote</string>
   <string name="device_setup_camera_anti_shake">Electronic anti shake</string>
   <string name="device_setup_camera_blcmode">Backlight compensation</string>
   <string name="device_setup_camera_definition">Definition</string>
   <string name="device_setup_camera_flip">Camera flip</string>
   <string name="device_setup_camera_metering">Metering</string>
   <string name="device_setup_camera_mirror">Camera mirror</string>
   <string name="device_setup_camera_noise_reduction">Noise reduction</string>
   <string name="emergency_call">Emergency Call</string>
   <string name="emergency_number">Emergency Number</string>
   <string name="gps_setting">Gps Setting</string>
   <string name="instrution">System Instruction</string>
   <string name="logout">Logout</string>
   <string name="manage">Manage</string>
   <string name="modify_password">Modify Password</string>
   <string name="net_configuration">Net Configuration</string>
   <string name="offline">Offline</string>
   <string name="recent_device">Current Connector</string>
   <string name="silence">Silence</string>
   <string name="wifi_config">Add new camera</string>
</resources>