<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        >
        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/toolbar_height">
            <ImageView
                android:src="@drawable/back"
                android:id="@+id/goBack"
                android:clickable="true"
                android:layout_gravity="left"
                android:padding="@dimen/back_image_padding"
                android:layout_width="@dimen/back_image_width"
                android:layout_height="@dimen/back_image_height"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/back_image_marginLeft"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/stdetail_top_minwidth"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/devicetop">
                <ImageView
                    android:layout_width="@dimen/stdetail_top_iocn"
                    android:layout_height="@dimen/stdetail_top_iocn"
                    android:layout_centerInParent="true"

                    android:id="@+id/devicePosition"
                    android:src="@drawable/detail1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:maxWidth="@dimen/stdetail_toptext_maxwidth"
                    android:layout_height="wrap_content"
                    android:text="PirCheck"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/setting_font_size"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:id="@+id/eq_name"/>
            </LinearLayout>

            <TextView
                android:layout_marginRight="@dimen/setting_marginRight"
                android:gravity="center"
                android:id="@+id/detailEdit"
                android:text="@string/manage"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_font_size"
                android:layout_gravity="right"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <LinearLayout
            android:padding="@dimen/stdetail_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/drawBack"
                android:gravity="center"
                android:padding="@dimen/stdetail_padding"
                android:background="@drawable/gray"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stdetail_height">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/stdetail_content_height">
                        <ImageView
                            android:id="@+id/signalPosition"
                            android:padding="@dimen/stdetail_wifi_padding"
                            android:src="@drawable/s0"
                            android:layout_width="@dimen/stdetail_wifi_width"
                            android:layout_height="@dimen/stdetail_wifi_width" />
                        <ImageView
                            android:id="@+id/battery"
                            android:padding="@dimen/stdetail_wifi_padding"
                            android:src="@drawable/q0"
                            android:layout_width="@dimen/stdetail_wifi_width"
                            android:layout_height="@dimen/stdetail_wifi_width" />
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/stdetail_content_height">
                        <ImageView
                            android:id="@+id/curtainDown"
                            android:src="@drawable/down"
                            android:layout_width="@dimen/stdetail_arrow_size"
                            android:layout_height="@dimen/stdetail_arrow_size" />
                        <ImageView
                            android:id="@+id/stop"
                            android:padding="@dimen/stdetail_middleImg_padding"
                            android:src="@drawable/stop"
                            android:layout_width="@dimen/stdetail_middleImg_width"
                            android:layout_height="@dimen/stdetail_middleImg_height" />
                        <ImageView
                            android:id="@+id/curtainUp"
                            android:src="@drawable/up"
                            android:layout_width="@dimen/stdetail_arrow_size"
                            android:layout_height="@dimen/stdetail_arrow_size" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/stdetail_content_height">
                        <TextView
                            android:id="@+id/showStatus"
                            android:textAllCaps="false"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="@dimen/stdetail_text_size"
                            android:text="@string/offline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/stdetail_button_content_height">

            <!--<LinearLayout-->
            <!--android:gravity="bottom"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="45dp">-->
            <!--<android.support.v7.widget.SwitchCompat-->
            <!--android:id="@+id/swich"-->
            <!--android:layout_width="60dp"-->
            <!--android:layout_height="45dp" />-->
            <!--</LinearLayout>-->
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/operation"
                    android:gravity="center"
                    android:text="@string/silence"
                    android:textSize="@dimen/stdetail_text_size"
                    android:clickable="true"
                    android:background="@drawable/button"
                    android:layout_gravity="center|bottom"
                    android:layout_width="@dimen/stdetail_button_width"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/emergencyCall"
                    android:text="@string/emergency_call"
                    android:textSize="@dimen/stdetail_text_size"
                    android:gravity="center"
                    android:clickable="true"
                    android:background="@drawable/button"
                    android:layout_width="@dimen/stdetail_button_width"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
